google and facebook signin

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,74 +3,99 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="55dp"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="130dp"
-            android:src="@drawable/emercifytext"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="40dp"
-            />
-        
-        <android.support.design.widget.TextInputLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            android:orientation="vertical"
+            android:paddingTop="55dp"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp">
 
-            <EditText
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="130dp"
+                android:src="@drawable/emercifytext"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="40dp"
+                />
+
+            <!--<android.support.design.widget.TextInputLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="8dp"-->
+                <!--android:layout_marginBottom="8dp">-->
+
+                <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:inputType="textEmailAddress"-->
+                    <!--android:hint="Email"-->
+                    <!--android:id="@+id/input_email"/>-->
+
+            <!--</android.support.design.widget.TextInputLayout>-->
+
+            <!--<android.support.design.widget.TextInputLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="8dp"-->
+                <!--android:layout_marginBottom="8dp">-->
+
+                <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:inputType="textPassword"-->
+                    <!--android:hint="Password"-->
+                    <!--android:id="@+id/input_password"/>-->
+
+            <!--</android.support.design.widget.TextInputLayout>-->
+
+
+            <!--<android.support.v7.widget.AppCompatButton-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="25dp"-->
+                <!--android:layout_marginBottom="25dp"-->
+                <!--android:text="Login"-->
+                <!--android:id="@+id/btn_login"-->
+                <!--android:padding="12dp"-->
+                <!--android:background="@drawable/white_rounded_button"/>-->
+
+            <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginBottom="25dp"-->
+                <!--android:text="No Accoun Yet? Create One"-->
+                <!--android:gravity="center"-->
+                <!--android:textSize="16dp"-->
+                <!--android:id="@+id/link_signup"-->
+                <!--android:textColor="@color/link_blue"/>-->
+
+            <com.google.android.gms.common.SignInButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                android:hint="Email"
-                android:id="@+id/input_email"/>
+                android:id="@+id/googe_signin">
 
-        </android.support.design.widget.TextInputLayout>
+            </com.google.android.gms.common.SignInButton>
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OR"
+                android:layout_gravity="center"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="25dp"/>
 
-            <EditText
+            <com.facebook.login.widget.LoginButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:hint="Password"
-                android:id="@+id/input_password"/>
+                android:id="@+id/facebook_login"/>
 
-        </android.support.design.widget.TextInputLayout>
-
-
-        <android.support.v7.widget.AppCompatButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="25dp"
-            android:text="Login"
-            android:id="@+id/btn_login"
-            android:padding="12dp"
-            android:background="@drawable/white_rounded_button"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
-            android:text="No Accoun Yet? Create One"
-            android:gravity="center"
-            android:textSize="16dp"
-            android:id="@+id/link_signup"
-            android:textColor="@color/link_blue"/>
-
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <ProgressBar
         android:layout_width="60dp"
