new logo on splash screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="link_blue">#4d94ff</color>
     <color name="darkRed">#cc0000</color>
     <color name="light_blue">#ccffff</color>
+    <color name="pearl_white">#eeebd9</color>
 </resources>
