--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:drawable="@color/darkRed"/>
+        android:drawable="@color/white"/>
 
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/ic_map"/>
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_emercify"/>
+        />
     </item>
+
+
 
 </layer-list>
