splash screen icon improved and simple text in login screen

--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -9,7 +9,7 @@
         <bitmap
             android:gravity="center"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_emercify"/>
+            android:src="@mipmap/ic_splashscreen2"/>
         />
     </item>
 
