update emptylist message w/ no net

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,6 +48,13 @@
                 android:textSize="15sp"
                 android:text="No internet Connection"
                 android:layout_centerInParent="true"/>
+            <TextView
+                android:id="@+id/no_postavail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="No posts Available"
+                android:layout_centerInParent="true"/>
         </RelativeLayout>
 
         <!-- Middle Body -->
