--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,7 +31,7 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="130dp"
             android:layout_centerInParent="true">
             <ProgressBar
                 android:layout_width="50dp"
@@ -41,6 +41,22 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="10dp"/>
+            <ImageView
+                android:id="@+id/no_netimage"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_above="@+id/no_net"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/ic_no_wifi"
+                android:backgroundTint="@color/black"/>
+            <ImageView
+                android:id="@+id/nopost_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_above="@+id/no_postavail"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/ic_nopost"
+                android:backgroundTint="@color/black"/>
             <TextView
                 android:id="@+id/no_net"
                 android:layout_width="wrap_content"
