--- a/app/src/main/res/layout/snippet_searchbar.xml
+++ b/app/src/main/res/layout/snippet_searchbar.xml
@@ -12,18 +12,29 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/roundedittext">
+                <ImageView
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/ic_searchicon"
+                    android:backgroundTint="@color/black"
+                    />
 
                 <EditText
+                    android:id="@+id/search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:layout_marginStart="26dp"
+                    android:background="@null"
+                    android:fontFamily="sans-serif"
                     android:hint="Search"
-                    android:textSize="20sp"
                     android:textColor="@color/black"
-                    android:layout_marginStart="15dp"
-                    android:id="@+id/search"
-                    android:background="@null"/>
+                    android:textSize="17sp" />
 
             </RelativeLayout>
 
