--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="light_blue">#ccffff</color>
     <color name="pearl_white">#eeebd9</color>
     <color name="emercifycolor">#55bdca</color>
+    <color name="light_grey">#EAECEE</color>
 </resources>
