--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -9,9 +9,23 @@
         <bitmap
             android:gravity="center"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_splashscreen2"/>
+            android:src="@drawable/emer"/>
         />
     </item>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
+        <ProgressBar
+            android:id="@+id/splash_screen_progress_bar"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
+            android:layout_marginRight="5dp" />
+    </RelativeLayout>
 
 
 
