--- a/app/src/main/res/drawable/white_rounded_button.xml
+++ b/app/src/main/res/drawable/white_rounded_button.xml
@@ -5,10 +5,10 @@
         android:state_pressed="true">
         <shape>
             <solid
-                android:color="@color/colorAccent"/>
+                android:color="@color/white"/>
             <stroke
-                android:color="@color/black"
-                android:width="1dp"/>
+                android:color="@color/emercifycolor"
+                android:width="2dp"/>
             <corners
                 android:radius="50dp"/>
         </shape>
@@ -19,8 +19,8 @@
             <solid
                 android:color="@color/white"/>
             <stroke
-                android:color="@color/grey"
-                android:width="1dp"/>
+                android:color="@color/black"
+                android:width="2dp"/>
             <corners
                 android:radius="50dp"/>
         </shape>
