--- a/app/src/main/res/layout/layout_center_view_profile.xml
+++ b/app/src/main/res/layout/layout_center_view_profile.xml
@@ -69,7 +69,8 @@
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:text="Nicail"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:fontFamily="sans-serif-condensed"/>
 
                 <TextView
                     android:layout_width="match_parent"
