--- a/app/src/main/res/layout/layout_top_tabs_notifs.xml
+++ b/app/src/main/res/layout/layout_top_tabs_notifs.xml
@@ -4,9 +4,10 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentTop="true">
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+
+        <!--<android.support.design.widget.AppBarLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
@@ -24,8 +25,10 @@
                         android:layout_height="match_parent"
                         android:text="Notifications"
                         android:textSize="20sp"
-                        android:textStyle="bold"
+                        android:layout_marginStart="15dp"
+                        android:fontFamily="sans-serif-condensed"
                         android:textColor="@color/black"
+                        android:textStyle="bold"
                         android:gravity="center_vertical"/>
 
                     <ImageView
@@ -35,22 +38,23 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:id="@+id/ivMap"
-                        android:src="@drawable/ic_map"/>
+                        android:src="@drawable/ic_map"
+                        android:background="@drawable/circle_shape"/>
 
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/ic_android"
-                        android:layout_centerVertical="true"
-                        android:layout_toLeftOf="@+id/ivMap"
-                        android:id="@+id/testNotif"/>
+                    <!--<ImageView-->
+                        <!--android:layout_width="40dp"-->
+                        <!--android:layout_height="40dp"-->
+                        <!--android:src="@drawable/ic_android"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:layout_toLeftOf="@+id/ivMap"-->
+                        <!--android:id="@+id/testNotif"/>-->
                     
                 </RelativeLayout>
                 
             
             </android.support.v7.widget.Toolbar>
 
-        </android.support.design.widget.AppBarLayout>
+        <!--</android.support.design.widget.AppBarLayout>-->
 
     </RelativeLayout>
 
