--- a/app/src/main/res/layout/snippet_center_editprofile.xml
+++ b/app/src/main/res/layout/snippet_center_editprofile.xml
@@ -12,187 +12,186 @@
             android:padding="20dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_photo"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:id="@+id/profile_photo"
+                android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 app:civ_border_color="@color/black"
-                app:civ_border_width="2dp"
-                android:layout_centerHorizontal="true"/>
+                app:civ_border_width="2dp" />
 
             <TextView
+                android:id="@+id/changeProfilePhoto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Change Photo"
-                android:id="@+id/changeProfilePhoto"
                 android:layout_below="@+id/profile_photo"
                 android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="Change Photo"
                 android:textColor="@color/link_blue"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
 
             <RelativeLayout
+                android:id="@+id/rellayout1"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_below="@+id/changeProfilePhoto"
                 android:layout_marginTop="80dp"
-                android:background="@drawable/grey_border_bottom"
-                android:id="@+id/rellayout1"
-                >
-                
+                android:background="@drawable/grey_border_bottom">
+
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_username"/>
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/ic_username" />
 
                 <EditText
+                    android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/username"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="40dp"
                     android:background="@null"
-                    android:inputType="textNoSuggestions"
-                    android:hint="Username"/>
+                    android:hint="Username"
+                    android:inputType="textNoSuggestions" />
 
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/rellayout2"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_below="@+id/rellayout1"
-                android:background="@drawable/grey_border_bottom"
-                android:id="@+id/rellayout2"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="15dp"
+                android:background="@drawable/grey_border_bottom">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_display_name"/>
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/ic_display_name" />
 
                 <EditText
+                    android:id="@+id/display_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/display_name"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="40dp"
                     android:background="@null"
-                    android:inputType="textNoSuggestions"
-                    android:hint="Display Name"/>
+                    android:hint="Display Name"
+                    android:inputType="textNoSuggestions" />
 
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/rellayout3"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_below="@+id/rellayout2"
-                android:background="@drawable/grey_border_bottom"
-                android:id="@+id/rellayout3"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="15dp"
+                android:background="@drawable/grey_border_bottom">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_web"/>
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/ic_web" />
 
                 <EditText
+                    android:id="@+id/website"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/website"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="40dp"
                     android:background="@null"
-                    android:inputType="textNoSuggestions"
-                    android:hint="Website"/>
+                    android:hint="Website"
+                    android:inputType="textNoSuggestions" />
 
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/rellayout4"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_below="@+id/rellayout3"
-                android:background="@drawable/grey_border_bottom"
-                android:id="@+id/rellayout4"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="15dp"
+                android:background="@drawable/grey_border_bottom">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_description"/>
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/ic_description" />
 
                 <EditText
+                    android:id="@+id/description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/description"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="40dp"
                     android:background="@null"
-                    android:inputType="textNoSuggestions"
-                    android:hint="Description"/>
+                    android:hint="Description"
+                    android:inputType="textNoSuggestions" />
 
             </RelativeLayout>
-            
+
             <TextView
+                android:id="@+id/textPrivateInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
-                android:text="PRIVATE INFORMATION"
                 android:layout_below="@id/rellayout4"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
+                android:text="PRIVATE INFORMATION"
+                android:fontFamily="sans-serif-condensed"
                 android:textColor="@color/black"
-                android:background="@drawable/grey_border_bottom"
-                android:id="@+id/textPrivateInfo"/>
+                android:textSize="25sp" />
 
             <RelativeLayout
+                android:id="@+id/rellayout5"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_below="@+id/textPrivateInfo"
-                android:background="@drawable/grey_border_bottom"
-                android:id="@+id/rellayout5"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="15dp"
+                android:background="@drawable/grey_border_bottom">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_email"/>
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/ic_email" />
 
                 <EditText
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/email"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="40dp"
                     android:background="@null"
-                    android:inputType="none"
+                    android:editable="false"
                     android:hint="Email"
-                    android:editable="false"/>
+                    android:inputType="none" />
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/rellayout6"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_below="@+id/rellayout5"
-                android:background="@drawable/grey_border_bottom"
-                android:id="@+id/rellayout6"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="15dp"
+                android:background="@drawable/grey_border_bottom">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_phone"/>
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/ic_phone" />
 
                 <EditText
+                    android:id="@+id/phoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/phoneNumber"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="40dp"
                     android:background="@null"
-                    android:inputType="textNoSuggestions"
                     android:hint="phoneNumber"
-                    />
+                    android:inputType="textNoSuggestions" />
             </RelativeLayout>
-            
+
         </RelativeLayout>
 
 
