--- a/app/src/main/res/layout/snippet_top_editprofiletoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_editprofiletoolbar.xml
@@ -1,14 +1,14 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     >
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/white_gray_border_bottom">
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="50dp">-->
 
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/profileToolBar">
+            android:layout_height="50dp"
+            android:id="@+id/profileToolBar"
+            android:background="@drawable/white_gray_border_bottom">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -18,7 +18,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginStart="10dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/backArrow"
                     android:src="@drawable/ic_backarrow"/>
@@ -31,7 +31,7 @@
                     android:text="Edit Profile"
                     android:textSize="20sp"
                     android:textColor="@color/black"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="10dp"
                     android:id="@+id/profileName"/>
 
                 <ImageView
@@ -48,5 +48,5 @@
 
         </android.support.v7.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>
+    <!--</android.support.design.widget.AppBarLayout>-->
 </merge>
