--- a/app/src/main/res/layout/snippet_top_profile.xml
+++ b/app/src/main/res/layout/snippet_top_profile.xml
@@ -16,7 +16,7 @@
             android:layout_marginTop="8dp"
             android:text="250"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,7 +26,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:text="Posts"
-            android:textSize="12sp"
+            android:textSize="15sp"
+            android:textAlignment="center"
             app:layout_constraintEnd_toStartOf="@+id/textFollowers"
             app:layout_constraintHorizontal_bias="0.055"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +42,7 @@
             android:layout_marginTop="8dp"
             android:text="300"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
             app:layout_constraintStart_toEndOf="@+id/tvPosts"
             app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Followers"
-            android:textSize="12sp"
+            android:textSize="15sp"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />
@@ -64,7 +66,7 @@
             android:layout_marginTop="8dp"
             android:text="400"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -74,7 +76,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="Following"
-            android:textSize="12sp"
+            android:textSize="15sp"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/textFollowers"
@@ -83,14 +86,16 @@
         <TextView
             android:id="@+id/textEditProfile"
             android:layout_width="165dp"
-            android:layout_height="22dp"
+            android:layout_height="23dp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/grey_border"
             android:text="Edit your Profile"
+            android:background="@drawable/rounded_border"
             android:textAlignment="center"
+            android:gravity="center"
             android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif-condensed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
