--- a/app/src/main/res/layout/snippet_top_profilebar.xml
+++ b/app/src/main/res/layout/snippet_top_profilebar.xml
@@ -1,14 +1,15 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     >
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/white_gray_border_bottom">
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="50dp"-->
+        <!--android:background="@drawable/white_gray_border_bottom">-->
 
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/profileToolBar">
+            android:id="@+id/profileToolBar"
+            android:background="@drawable/white_gray_border_bottom">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -19,7 +20,9 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:textSize="20sp"
+                    android:fontFamily="sans-serif-condensed"
                     android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:layout_marginStart="15dp"
                     android:id="@+id/profileName"/>
     
@@ -37,5 +40,5 @@
 
         </android.support.v7.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>
+    <!--</android.support.design.widget.AppBarLayout>-->
 </merge>
