--- a/app/src/main/res/layout/snippet_top_view_profile.xml
+++ b/app/src/main/res/layout/snippet_top_view_profile.xml
@@ -16,7 +16,7 @@
             android:layout_marginTop="2dp"
             android:text="250"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:text="Posts"
-            android:textSize="12sp"
+            android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@+id/textFollowers"
             app:layout_constraintHorizontal_bias="0.055"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
             android:layout_marginStart="8dp"
             android:text="300"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toEndOf="@+id/tvPosts"
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Followers"
-            android:textSize="12sp"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />
@@ -64,7 +64,7 @@
             android:layout_marginTop="2dp"
             android:text="400"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="Following"
-            android:textSize="12sp"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/textFollowers"
@@ -89,8 +89,9 @@
             android:background="@drawable/unfollow_button"
             android:text="Unfollow"
             android:textAlignment="center"
+            android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -107,8 +108,10 @@
             android:background="@drawable/follow_button"
             android:text="Follow"
             android:textAlignment="center"
+            android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif-condensed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
