--- a/app/src/main/res/layout/snippet_searchbar.xml
+++ b/app/src/main/res/layout/snippet_searchbar.xml
@@ -12,7 +12,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="28dp"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/roundedittext">
                 <ImageView
