--- a/app/src/main/res/layout/layout_top_tabs_map.xml
+++ b/app/src/main/res/layout/layout_top_tabs_map.xml
@@ -4,9 +4,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentTop="true">
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <!--<android.support.design.widget.AppBarLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
@@ -30,7 +30,6 @@
                         android:layout_height="match_parent"
                         android:text="Maps"
                         android:textSize="20sp"
-                        android:textStyle="bold"
                         android:textColor="@color/black"
                         android:layout_centerInParent="true"
                         android:gravity="center"/>
@@ -41,7 +40,7 @@
             
             </android.support.v7.widget.Toolbar>
 
-        </android.support.design.widget.AppBarLayout>
+        <!--</android.support.design.widget.AppBarLayout>-->
 
     </RelativeLayout>
 
