--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="130dp"
+        android:layout_centerInParent="true">
+        <ProgressBar
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/progress_Bar1"
+            android:indeterminateTint="@color/emercifycolor"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="10dp"/>
+        <ImageView
+            android:id="@+id/no_netimage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_above="@+id/no_net"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/ic_no_wifi"
+            android:backgroundTint="@color/black"/>
+        <ImageView
+            android:id="@+id/nopost_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_above="@+id/no_postavail"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/ic_nopost"
+            android:backgroundTint="@color/black"/>
+        <TextView
+            android:id="@+id/no_net"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="No internet Connection"
+            android:layout_centerInParent="true"/>
+        <TextView
+            android:id="@+id/no_postavail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="No posts Available"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
