--- a/app/src/main/res/drawable/roundedittext.xml
+++ b/app/src/main/res/drawable/roundedittext.xml
@@ -2,7 +2,7 @@
 <!-- res/drawable/rounded_edittext_focused.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="@color/com_facebook_button_login_silver_background_color_pressed"/>
+    <solid android:color="@color/light_grey"/>
     <stroke android:width="1dp" android:color="@color/emercifycolor" />
     <corners
         android:bottomRightRadius="15dp"
