--- a/app/src/main/res/layout/layout_top_tabs.xml
+++ b/app/src/main/res/layout/layout_top_tabs.xml
@@ -8,13 +8,29 @@
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="wrap_content">-->
 
-            <android.support.design.widget.TabLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tabs"
-                android:background="@drawable/white_gray_border_bottom">
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tabs"
+            android:background="@drawable/white_gray_border_bottom">
 
-            </android.support.design.widget.TabLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="15dp">
+
+                <ImageView
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/emercifytext1"
+                    android:id="@+id/emercify_text"
+                    android:layout_centerHorizontal="true"/>
+
+
+            </RelativeLayout>
+
+
+        </android.support.v7.widget.Toolbar>
 
         <!--</android.support.design.widget.AppBarLayout>-->
 
