--- a/app/src/main/res/layout/snippet_top_nexttoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_nexttoolbar.xml
@@ -1,9 +1,8 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     >
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/white_gray_border_bottom">
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="50dp">-->
 
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
@@ -20,17 +19,21 @@
                     android:layout_marginEnd="20dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/ivBackArrow"
-                    android:src="@drawable/ic_backarrow"/>\
+                    android:src="@drawable/ic_backarrow"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="70dp"
+                    android:layout_height="35dp"
+                    android:fontFamily="sans-serif-condensed"
                     android:text="SHARE"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="15dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="20sp"
-                    android:textColor="@color/link_blue"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textColor="@color/white"
                     android:layout_centerVertical="true"
+                    android:background="@drawable/rounded_border_blue"
                     android:id="@+id/tvShare"/>
 
 
@@ -38,5 +41,5 @@
 
         </android.support.v7.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>
+    <!--</android.support.design.widget.AppBarLayout>-->
 </merge>
