--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="pearl_white">#eeebd9</color>
     <color name="emercifycolor">#55bdca</color>
     <color name="light_grey">#EAECEE</color>
+    <color name ="notseen">#d8f0f3</color>
 </resources>
