--- a/app/src/main/res/drawable/white_gray_border_bottom.xml
+++ b/app/src/main/res/drawable/white_gray_border_bottom.xml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#CABBBBBB"/>
+        </shape>
+    </item>
 
     <item
-        android:bottom="1dp"
-        android:top="-1dp"
-        android:right="-1dp"
-        android:left="-1dp">
-
-        <shape
-            android:shape="rectangle">
-            <stroke
-                android:width="1dp"
-                android:color="@color/grey" />
-
-            <solid
-                android:color="@color/white"/>
-
+        android:left="0dp"
+        android:right="0dp"
+        android:top="0dp"
+        android:bottom="2dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/white"/>
+            <corners android:radius="2dp" />
         </shape>
     </item>
 </layer-list>
