--- a/app/src/main/res/layout/dialog_post.xml
+++ b/app/src/main/res/layout/dialog_post.xml
@@ -1,56 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="280dp"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/kindofpost"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="What kind of post?"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:fontFamily="sans-serif-condensed"
             android:layout_marginBottom="10dp"
             android:textSize="20sp"
             android:textColor="@color/black"
             />
-        <TextView
-            android:id="@+id/normal_post"
+        <RelativeLayout
+            android:id="@+id/dialogrel1"
             android:layout_below="@+id/kindofpost"
-            android:clickable="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Normal"
             android:layout_centerHorizontal="true"
-            android:padding="10dp"
-            android:textColor="@drawable/text_changecolor"
-            android:textSize="18sp"/>
-        <TextView
-            android:id="@+id/reports_post"
-            android:clickable="true"
-            android:layout_below="@+id/normal_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/normal_post"
+                android:clickable="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:text="Normal"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
+                android:textColor="@drawable/text_changecolor"
+                android:textSize="18sp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/dialogrel2"
+            android:layout_below="@+id/dialogrel1"
             android:layout_centerHorizontal="true"
-            android:padding="10dp"
-            android:textColor="@drawable/text_changecolor"
-            android:text="Report"/>
-        <TextView
-            android:id="@+id/emergency_post"
-            android:clickable="true"
-            android:layout_below="@id/reports_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:padding="10dp"
-            android:textSize="18sp"
-            android:textColor="@drawable/text_changecolor"
-            android:text="Emergency"/>
+            android:layout_width="150dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/emergency_post"
+                android:layout_marginRight="0dp"
+                android:background="@mipmap/ic_emerdialog"/>
+            <TextView
+                android:id="@+id/emergency_post"
+                android:clickable="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
+                android:fontFamily="sans-serif-condensed"
+                android:textSize="18sp"
+                android:layout_centerVertical="true"
+                android:textColor="@drawable/text_changecolor"
+                android:text="Emergency"/>
+        </RelativeLayout>
+
         
     </RelativeLayout>
 
